@@ -13,6 +13,7 @@
 * maxiPago: Send currency with request [curiousepic]
 * Credorax: Map order_id to field H9 [curiousepic]
 * Authorize.net: Remove duplicate country GB [shasum]
+* PayU Latam: Add processWithoutCvv2 field [shasum]
 
 == Version 1.61.0 (November 7, 2016)
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
